Fix #3791 Experiment title and experiment type strings are centre aligned on mobile view.

--- a/frontend/src/app/containers/ExperimentPage/index.scss
+++ b/frontend/src/app/containers/ExperimentPage/index.scss
@@ -528,4 +528,10 @@
       padding-top: 0;
     }
   }
+
+  .details-header{
+    header{
+      align-items: center;
+    }
+  }
 }
